# Expense_Tracker_App

./: .gitignore
backend/: pyproject.toml
backend/api/expenses/: models.py  serializers.py  views.py
backend/api/expenses/management/commands/: load_fake_data.py
backend/api/expenses/migrations/: 0001_initial.py
backend/config/: .env.example  settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/dashboard/: CategoriesView.tsx  CategoryForm.tsx  ExpenseForm.tsx  ExpensesView.tsx  FilterPanel.tsx  Header.tsx  Sidebar.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
